--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-slate-100 dark:bg-dark dark:text-white">
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
